--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -1,15 +1,18 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import 'react-day-picker/dist/style.css';
 
 :root {
    --primary: #3A57E8;
    --background: #E9ECEF;
+   --border-color: #D0D5DD;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 html {
@@ -22,3 +25,27 @@ body {
     line-height: 1.5;
     text-rendering: optimizeSpeed;
 }
+
+.rdp {
+    --rdp-accent-color: var(--primary);
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+
+    &:hover {
+        background-color: #a8bbbf;
+    } 
+}
+
