table pagination + multiselection + loading

--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,47 @@
    --primary: #3A57E8;
    --background: #E9ECEF;
    --border-color: #D0D5DD;
+
+
+    .rdt_Table {
+        font-size: 1.6rem;
+    }
+    .rdt_TableRow {
+        font-size: 1.6rem;
+    }
+    .rdt_TableCol {
+        font-size: 1.6rem;
+    }
+    .rdt_TableCol_Sortable {
+        font-size: 1.6rem;
+    }
+    .rdt_TableCell {
+        font-size: 1.6rem;
+    }
+    .rdt_TableHeader {
+        font-size: 1.6rem;
+    }
+    .rdt_TableFooter {
+        font-size: 1.6rem;
+    }
+    .rdt_TableHead {
+        font-size: 1.6rem;
+    }
+    .rdt_TableHeadRow {
+        font-size: 1.6rem;
+    }
+    .rdt_TableBody {
+        font-size: 1.6rem;
+    }
+    .rdt_ExpanderRow {
+        font-size: 1.6rem;
+    }
+    .rdt_Pagination {
+        font-size: 1.6rem;
+    }
+    .MuiSvgIcon-root {
+        font-size: 2rem;
+    }
 }
 
 * {
